--- a/test_0502.ipynb
+++ b/test_0502.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -313,13 +313,6 @@
        "        <td>76.10292683</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>117</td>\n",
-       "        <td>EGY</td>\n",
-       "        <td>2015</td>\n",
-       "        <td>3.314</td>\n",
-       "        <td>71.31695122</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "        <td>356</td>\n",
        "        <td>ESP</td>\n",
        "        <td>2015</td>\n",
@@ -579,13 +572,6 @@
        "        <td>74.28931707</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>258</td>\n",
-       "        <td>MDA</td>\n",
-       "        <td>2015</td>\n",
-       "        <td>1.248</td>\n",
-       "        <td>71.62643902</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "        <td>242</td>\n",
        "        <td>MDV</td>\n",
        "        <td>2015</td>\n",
@@ -775,13 +761,6 @@
        "        <td>75.48780488</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>370</td>\n",
-       "        <td>SUR</td>\n",
-       "        <td>2015</td>\n",
-       "        <td>2.336</td>\n",
-       "        <td>71.29417073</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "        <td>344</td>\n",
        "        <td>SVK</td>\n",
        "        <td>2015</td>\n",
@@ -836,13 +815,6 @@
        "        <td>2015</td>\n",
        "        <td>2.052</td>\n",
        "        <td>75.42621951</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>406</td>\n",
-       "        <td>UKR</td>\n",
-       "        <td>2015</td>\n",
-       "        <td>1.506</td>\n",
-       "        <td>71.1895122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>414</td>\n",
@@ -900,13 +872,6 @@
        "        <td>4.028</td>\n",
        "        <td>73.76487805</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "        <td>208</td>\n",
-       "        <td>XKX</td>\n",
-       "        <td>2015</td>\n",
-       "        <td>2.09</td>\n",
-       "        <td>71.34634146</td>\n",
-       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
@@ -945,7 +910,6 @@
        " (113, 'DOM', 2015, Decimal('2.451'), Decimal('73.67668293')),\n",
        " (5, 'DZA', 2015, Decimal('2.805'), Decimal('75.04253659')),\n",
        " (115, 'ECU', 2015, Decimal('2.513'), Decimal('76.10292683')),\n",
-       " (117, 'EGY', 2015, Decimal('3.314'), Decimal('71.31695122')),\n",
        " (356, 'ESP', 2015, Decimal('1.32'), Decimal('83.3804878')),\n",
        " (124, 'EST', 2015, Decimal('1.54'), Decimal('77.13170732')),\n",
        " (132, 'FIN', 2015, Decimal('1.71'), Decimal('81.38536585')),\n",
@@ -983,7 +947,6 @@
        " (232, 'MAC', 2015, Decimal('1.276'), Decimal('80.76607317')),\n",
        " (364, 'MAF', 2015, Decimal('1.81'), Decimal('79.47073171')),\n",
        " (266, 'MAR', 2015, Decimal('2.486'), Decimal('74.28931707')),\n",
-       " (258, 'MDA', 2015, Decimal('1.248'), Decimal('71.62643902')),\n",
        " (242, 'MDV', 2015, Decimal('2.088'), Decimal('76.979')),\n",
        " (254, 'MEX', 2015, Decimal('2.213'), Decimal('76.92068293')),\n",
        " (234, 'MKD', 2015, Decimal('1.535'), Decimal('75.49534146')),\n",
@@ -1011,7 +974,6 @@
        " (340, 'SGP', 2015, Decimal('1.24'), Decimal('82.59512195')),\n",
        " (119, 'SLV', 2015, Decimal('1.909'), Decimal('73.00109756')),\n",
        " (334, 'SRB', 2015, Decimal('1.46'), Decimal('75.48780488')),\n",
-       " (370, 'SUR', 2015, Decimal('2.336'), Decimal('71.29417073')),\n",
        " (344, 'SVK', 2015, Decimal('1.37'), Decimal('77.21219512')),\n",
        " (346, 'SVN', 2015, Decimal('1.58'), Decimal('81.07804878')),\n",
        " (374, 'SWE', 2015, Decimal('1.88'), Decimal('82.55121951')),\n",
@@ -1020,7 +982,6 @@
        " (390, 'TON', 2015, Decimal('3.678'), Decimal('72.94404878')),\n",
        " (394, 'TUN', 2015, Decimal('2.132'), Decimal('74.97597561')),\n",
        " (396, 'TUR', 2015, Decimal('2.052'), Decimal('75.42621951')),\n",
-       " (406, 'UKR', 2015, Decimal('1.506'), Decimal('71.1895122')),\n",
        " (414, 'URY', 2015, Decimal('2.007'), Decimal('77.13821951')),\n",
        " (412, 'USA', 2015, Decimal('1.843'), Decimal('78.74146341')),\n",
        " (366, 'VCT', 2015, Decimal('1.952'), Decimal('73.05236585')),\n",
@@ -1028,11 +989,10 @@
        " (424, 'VIR', 2015, Decimal('1.74'), Decimal('79.87317073')),\n",
        " (422, 'VNM', 2015, Decimal('1.96'), Decimal('75.77773171')),\n",
        " (418, 'VUT', 2015, Decimal('3.31'), Decimal('72.15736585')),\n",
-       " (324, 'WSM', 2015, Decimal('4.028'), Decimal('73.76487805')),\n",
-       " (208, 'XKX', 2015, Decimal('2.09'), Decimal('71.34634146'))]"
+       " (324, 'WSM', 2015, Decimal('4.028'), Decimal('73.76487805'))]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1004,8 @@
     "FROM POPULATIONS\n",
     "WHERE year = 2015\n",
     "  AND life_expectancy > (SELECT AVG(life_expectancy)\n",
-    "                         FROM populations)"
+    "                         FROM populations\n",
+    "                         WHERE year = 2015)"
    ]
   },
   {
